   * BUFR (edition 3) mostly works
  geoloc
   * Add RotatedPole projection
  ft
   * Point Feature Types completely reworked, based on StructureData iterators
  NcML
   * Tiled aggregation
   * Existing accepts timeUnitsChange
   * Union accepts scan

 Libraries
  * use new visad library 12/04/07

 Release Details:
    15: change StringBuffer to StringBuilder for efficiency
    14: NetcdfDataset: unsigned always gets converted
        Netcdf-3 files: truncate Strings at first null byte.
        complete rework of point datatypes, now in package ucar.nc2.ft (feature types)
        many improvements to Structure, ArrayStructure etc
        rewrite BUFR and supporting library, improve tables, etc
        make sure compiles under 1.5
    13: hdf4 attribute arrays
    12: DODS preload
        put back HttpClientManager, RuntimeConfigParsser temporarily (testing with IDV)
        hdf4 bug fixes
        experiment with ucar.nc2.dt2
        iosp.NmcObsLegacy
        DataType Sequence
    11: start to fix name/shortName, ie deal with Groups systematically
        Structure/ArrayStructure/StructureData refactor
    10: hdf4 bug fix - no data tag, use missing data
        Structure.subset(), nc3 optimizes for it
        hdf5, ArrayStructureBB : set byteOrder
        ArrayStructureBB puts Strings on "heap"
        rearrange packages to separate modules
        cdm build redone - xxxComplete.jar added
        fix problem preventing 1.5 compilation (ternary op returns array)
    09: hdf5 byteOrder must be set when chunked (tiledLayout)

========================================
Changes from Java-Netcdf version 2.2

 Data Model
  * Object names are Unicode Strings. No Restrictions on characters used.
  * DataType STRING are Unicode. In Netcdf3/4, stored as UTF-8 encoded.
  * DataType CHAR are uninterpreted bytes, default is to consider them ascii.
  * DataType ENUM
  * DataType OPAQUE
  * DataType SEQUENCE

API Extensive API changes. Most, but not completely backwards-compatible.