@@ -32,7 +32,7 @@ import java.io.File;
  * @since Jan 1, 2008
  */
 public class TestH4readAndCount extends TestCase {
-  static public String testDir = "R:/testdata/hdf4/";
+  static public String testDir = TestAll.upcShareTestDataDir + "hdf4/";
   //static public String testDir = "C:/data/hdf4/";
 
   public TestH4readAndCount(String name) {
